--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,8 +2,12 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://dk.tech/",
+      "sslPort": 0
+    },
     "iisExpress": {
-      "applicationUrl": "http://localhost:60027/",
+      "applicationUrl": "http://localhost:57594/",
       "sslPort": 0
     }
   },
@@ -16,12 +20,16 @@
       }
     },
     "deepakkumar.tech": {
-      "commandName": "Project",
+      "commandName": "IIS",
+      "workingDirectory": "C:\\Code\\Git\\deepakkumar.tech\\deepakkumar.tech",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:60028/"
+    },
+    "newProfile1": {
+      "commandName": "IISExpress"
     }
   }
 }
