--- a/deepakkumar.tech/package.json
+++ b/deepakkumar.tech/package.json
@@ -14,7 +14,10 @@
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
+    "css-loader": "^0.28.11",
+    "raw-loader": "^0.5.1",
     "rxjs": "^5.4.2",
+    "style-loader": "^0.20.3",
     "systemjs": "0.19.40",
     "webpack": "^4.5.0",
     "zone.js": "^0.8.4"
@@ -25,6 +28,10 @@
     "angularjs-template-loader": "^0.1.1",
     "canonical-path": "0.0.2",
     "concurrently": "^3.2.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-uglify": "^3.0.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -34,7 +41,7 @@
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
     "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.2",
     "tslint": "^3.15.1",
     "typescript": "~2.1.0",
     "webpack-cli": "^2.0.14"
