--- a/deepakkumar.tech/deepakkumar.tech.csproj
+++ b/deepakkumar.tech/deepakkumar.tech.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="app\polyfills.ts" />
     <None Remove="app\styles.ts" />
+    <None Remove="gulpfile.js" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
