--- a/deepakkumar.tech/package.json
+++ b/deepakkumar.tech/package.json
@@ -47,7 +47,9 @@
     "webpack-cli": "^2.0.14"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "buildDev": "SET NODE_ENV=development && webpack -d --color",
+    "buildProd": "SET NODE_ENV=production && webpack -p --color"
   },
   "repository": {
     "type": "git",
