--- a/deepakkumar.tech/deepakkumar.tech.csproj
+++ b/deepakkumar.tech/deepakkumar.tech.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <TypeScriptToolsVersion>2.6</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.5</TypeScriptToolsVersion>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="app\controllers\**" />
@@ -24,7 +24,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="app\components\header.component.ts" />
+    <TypeScriptCompile Include="app\components\profile\header\header.component.ts" />
     <TypeScriptCompile Include="app\polyfills.ts" />
     <TypeScriptCompile Include="app\styles.ts" />
   </ItemGroup>
