--- a/deepakkumar.tech/package.json
+++ b/deepakkumar.tech/package.json
@@ -13,8 +13,11 @@
     "@angular/platform-browser-dynamic": "~4.3.4",
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.28.11",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "raw-loader": "^0.5.1",
     "rxjs": "^5.4.2",
     "style-loader": "^0.20.3",
