--- a/deepakkumar.tech/package.json
+++ b/deepakkumar.tech/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "profile site",
   "main": "main.js",
+  "private": true,
   "dependencies": {
-    "@angular/common": "~4.3.4",
-    "@angular/compiler": "~4.3.4",
-    "@angular/core": "~4.3.4",
-    "@angular/forms": "~4.3.4",
-    "@angular/http": "~4.3.4",
-    "@angular/platform-browser": "~4.3.4",
-    "@angular/platform-browser-dynamic": "~4.3.4",
-    "@angular/router": "~4.3.4",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "angular-in-memory-web-api": "~0.3.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
@@ -19,40 +21,54 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.4.2",
+    "rxjs": "^5.5.6",
     "style-loader": "^0.20.3",
-    "systemjs": "0.19.40",
     "webpack": "^4.5.0",
-    "zone.js": "^0.8.4"
+    "webpack-cli": "^2.0.14",
+    "zone.js": "^0.8.19",
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
     "angularjs-template-loader": "^0.1.1",
     "canonical-path": "0.0.2",
+    "codelyzer": "^4.0.1",
     "concurrently": "^3.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-uglify": "^3.0.0",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    "protractor": "~4.0.14",
+    "protractor": "~5.1.2",
     "rimraf": "^2.6.2",
-    "tslint": "^3.15.1",
-    "typescript": "~2.1.0",
-    "webpack-cli": "^2.0.14"
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "buildDev": "SET NODE_ENV=development && webpack -d --color",
-    "buildProd": "SET NODE_ENV=production && webpack -p --color"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "repository": {
     "type": "git",
@@ -64,7 +80,7 @@
     ".net"
   ],
   "author": "deepak kumar",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/deepaknasa/deepakkumar/issues"
   },
