--- a/deepakkumar.tech/deepakkumar.tech.csproj
+++ b/deepakkumar.tech/deepakkumar.tech.csproj
@@ -10,9 +10,6 @@
     <None Remove="app\controllers\**" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="DocumentDBRepository.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Remove="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -23,8 +20,10 @@
     <None Remove="app\styles.ts" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Microsoft.Azure.DocumentDB" Version="1.21.1" />
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.9.1" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
